--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.sagycorp.greet"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 6
+        versionName "1.4"
     }
     buildTypes {
         release {
@@ -37,4 +37,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile files('libs/applovin-6.1.4.jar')
+    compile files('libs/appodeal-1.13.10.jar')
+    compile files('libs/chartboost-6.0.2.jar')
+    compile files('libs/inmobi-5.0.1.jar')
+    compile files('libs/my-target-4.1.2.jar')
+    compile files('libs/yandex-metrica-android-2.00.jar')
+    compile project(':unity-ads-1.5.3')
 }
