--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 }
