--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.sagycorp.greet"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 8
-        versionName "1.0"
+        versionCode 9
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -29,13 +29,15 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile files('libs/applovin-6.1.4.jar')
-    compile files('libs/appodeal-1.13.10.jar')
-    compile files('libs/chartboost-6.0.2.jar')
-    compile files('libs/inmobi-5.0.1.jar')
-    compile files('libs/my-target-4.1.2.jar')
-    compile files('libs/yandex-metrica-android-2.00.jar')
-    compile project(':unity-ads-1.5.3')
+    compile files('libs/applovin-6.1.5.jar')
+    compile files('libs/appodeal-1.14.2.jar')
+    compile files('libs/chartboost-6.2.0.jar')
+    compile files('libs/flurry-analytics-6.2.0.jar')
+    compile files('libs/inmobi-5.2.0.jar')
+    compile files('libs/my-target-4.2.0.jar')
+    compile files('libs/yandex-metrica-2.30.jar')
+    compile project(':unity-ads-1.5.6')
+    compile project(':pubnative-1.4.8')
     compile 'com.parse.bolts:bolts-android:1.3.0'
     compile 'com.parse:parse-android:1.11.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
