--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+
     <!--
       IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
       to match your app's package name + ".permission.C2D_MESSAGE".
@@ -51,6 +53,28 @@
                 <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FullStory"
+            android:label="@string/title_activity_full_story"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sagycorp.greet.MainActivity" />
+        </activity>
+        <activity
+            android:name=".FullPlaceInfo"
+            android:label="@string/title_activity_full_place_info"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sagycorp.greet.MainActivity" />
+        </activity>
+        <!-- Register the Alarm Receiver -->
+        <receiver android:name="com.sagycorp.greet.Helper.NotificationCreator"/>
 
         <service android:name="com.parse.PushService" />
 
@@ -72,6 +96,15 @@
 
                 <!-- IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.sagycorp.greet" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name="com.appodeal.ads.AppodealPackageAddedReceiver"
+            android:exported="true" android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <data android:scheme="package" />
             </intent-filter>
         </receiver>
 
@@ -223,26 +256,11 @@
             android:name="com.inmobi.signals.activityrecognition.ActivityRecognitionManager"
             android:enabled="true" />
 
+        <!--suppress AndroidDomInspection -->
         <activity
-            android:name=".FullStory"
-            android:label="@string/title_activity_full_story"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sagycorp.greet.MainActivity" />
-        </activity>
-        <activity
-            android:name=".FullPlaceInfo"
-            android:label="@string/title_activity_full_place_info"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sagycorp.greet.MainActivity" />
-        </activity>
+            android:name="com.flurry.android.FlurryFullscreenTakeoverActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+
     </application>
 
 </manifest>
