--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 android {
     signingConfigs {
         config {
@@ -15,7 +14,7 @@ android {
         applicationId "com.sagycorp.greet"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 9
+        versionCode 10
         versionName "2.0"
     }
     buildTypes {
@@ -48,4 +47,8 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    compile 'com.google.android.gms:play-services-analytics:8.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
